ISGOSU-395: Fix javaDoc break